# Docker-Rust-Redis-PG

./: README.md
redis-curd/: .env  Cargo.toml  Dockerfile  docker-compose.yml
redis-curd/config/logs/: log4rs.yaml
redis-curd/migrations/2024-04-06-190942_spells/: down.sql  up.sql
redis-curd/src/: create_app.rs  error.rs  lib.rs  main.rs
redis-curd/src/api/controllers/handlers/: SpellHandler.rs  mod.rs
redis-curd/src/api/dto/: SpellDTO.rs  mod.rs
redis-curd/src/cache/: redis.rs
redis-curd/src/container/: container.rs
redis-curd/src/domain/: constants.rs  error.rs  mod.rs
redis-curd/src/domain/models/: Spell.rs  mod.rs
redis-curd/src/domain/repositories/: SpellRepository.rs  mod.rs  repository.rs
redis-curd/src/domain/services/: SpellService.rs
redis-curd/src/infrastructure/: mod.rs  schema.rs
redis-curd/src/infrastructure/cache/redis/: redis.rs
redis-curd/src/infrastructure/database/: mod.rs
redis-curd/src/infrastructure/database/PostgresDB/: mod.rs  postgreSQL.rs
redis-curd/src/infrastructure/errors/: CacheSupportedRepositoryError.rs  DieselRepositoryError.rs  mod.rs
redis-curd/src/infrastructure/models/: CacheSupportedModelForSpell.rs  DieselModelForSpell.rs  Spell.rs  mod.rs
redis-curd/src/infrastructure/repositories/: CacheSupportedRepositoryForSpell.rs  DieselRepositoryForSpell.rs  SpellRepository.rs  mod.rs
redis-curd/src/services/: SpellService.rs  mod.rs
redis-curd/src/tests/api/: mod.rs  spellAppTest.rs
