[package]
name = "redis-curd"
version = "0.1.0"
edition = "2021"
authors = ['Atriya']
inspirations = ['Dreams of Code' , 'cookiecutter-rust-actix-clean-architecture by Marc van Duyn']
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.25.2"
actix-web = "4.5.1"
env_logger = "0.11.3"
log = "0.4.21"
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
async-trait = "0.1.79"
diesel = { version = "2.1.5", features = ["r2d2", "postgres_backend", "postgres"] }
actix-threadpool = "0.3.3"
bytes = "1.6.0"
futures-core = "0.3.30"
pin-project-lite = "0.2.14"
regex = "1.10.4"
time = "0.3.34"
http = "0.2.12"
diesel_migrations = "2.1.0"