[package]
name = "redis-curd"
version = "0.1.0"
edition = "2021"
authors = ['Atriya']
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.25.4" }
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
actix-web = "4.6.0"
env_logger = "0.11.3"
log = "0.4.21"
log4rs = "1.3.0"
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.115"
async-trait = "0.1.79"
diesel = { version = "2.2.0", features = ["r2d2", "postgres_backend", "postgres"] }
actix-threadpool = "0.3.3"
bytes = "1.6.0"
futures-core = "0.3.30"
pin-project-lite = "0.2.14"
regex = "1.10.4"
time = "0.3.34"
http = "0.2.12"
diesel_migrations = "2.1.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }